<resources>
    <string name="app_name">Moeda Digital</string>

    <!--HTTP Erros-->
    <string name="bad_request">There is something wrong with your request</string>
    <string name="unauthorized">Your API key is wrong</string>
    <string name="forbidden">Your API key does\'t have enough privileges to access this resource</string>
    <string name="too_many_requests">You have exceeded your API key rate limits</string>
    <string name="no_data">You requested specific single item that we don\'t have at this</string>
    <string name="error_check_internet">\"Check your use of internet, please. \n\n\"</string>

    <string name="back">Voltar</string>
    <string name="add">Adicionar</string>
    <string name="remover">Remover</string>
    <string name="v_traded">volumes negociados</string>
    <string name="last_hour">última hora</string>
    <string name="last_day">último dia</string>
    <string name="last_month">último mês</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="_3200000">3200000</string>
    <string name="coin_view">Coin view</string>
    <string name="im_coin">Imagem_view_coin</string>
    <string name="txt_coin">Textview_coin</string>
    <string name="txt_coin_model">Text_coin_model</string>
    <string name="txt_price_coin">Text_price_coins</string>
    <string name="imagem_coin">Imagem_view_coin</string>
    <string name="text_coin">Textview_coin</string>
    <string name="text_coin_model">Text_coin_model</string>
    <string name="text_price_coin">Text_price_coins</string>
    <string name="coins">Coins</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="remove_coin_database">Moeda removida com sucesso</string>
    <string name="add_coin_database">Moeda adicionada com sucesso</string>
    <string name="dollar_sign">$</string>

    <!--Accessilility-->
    <string name="content_description_application_name">Moeda Digital</string>
    <string name="content_description_current_date">Data atual</string>
    <string name="content_description_search_field">Campo de busca</string>
    <string name="content_description_menu">Menu de todas as moedas e das favoritas</string>
    <string name="content_description_coin_image">Simbolo da moeda</string>
    <string name="content_description_coin_name">Nome da moeda</string>
    <string name="content_description_coin_abbreviation">Abreviação da moeda</string>
    <string name="content_description_coin_value">Valor da moeda</string>
    <string name="content_description_return">Voltar a tela anterior</string>
    <string name="content_description_star">Estrela que indica que esta na lista dos favoritos</string>
    <string name="content_description_add">Botão adicionar ou remover dos favoritos</string>
    <string name="content_description_volumes_traded">Tabela de volumes negociados</string>
    <string name="content_description_last_hour">Ultima hora</string>
    <string name="content_description_value_last_hour">Valor da ultima hora</string>
    <string name="content_description_last_day">Ultimo dia</string>
    <string name="content_description_value_last_day">Valor do ultimo dia</string>
    <string name="content_description_last_month">Ultimo mês</string>
    <string name="content_description_value_last_month">Valor do ultimo mês</string>
    <string name="content_description_favorite">Moeda favoritada</string>

</resources>
