<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coinc_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="16dp"
    android:contentDescription="@null">

    <ImageView
        android:id="@+id/imagem_coin"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_coin"
        android:contentDescription="@string/content_description_coin_image"/>

    <TextView
        android:id="@+id/txt_coin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imagem_coin"
        app:layout_constraintTop_toTopOf="@id/imagem_coin"
        tools:text="@string/bitcoin"
        android:contentDescription="@string/content_description_coin_name"/>

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/txt_coin"
        app:layout_constraintStart_toEndOf="@+id/txt_coin"
        app:layout_constraintTop_toTopOf="@+id/txt_coin"
        android:contentDescription="@string/content_description_star"/>

    <TextView
        android:id="@+id/txt_coin_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imagem_coin"
        app:layout_constraintTop_toBottomOf="@id/txt_coin"
        tools:text="Btc"
        android:contentDescription="@string/content_description_coin_abbreviation"/>

    <TextView
        android:id="@+id/txt_price_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_attach_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3200000"
        android:contentDescription="@string/content_description_coin_value"/>

</androidx.constraintlayout.widget.ConstraintLayout>
