<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0075984C"
    android:backgroundTint="@color/white"
    android:visibility="visible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_return"
            android:fontFamily="@font/roboto"
            android:padding="6dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="BTC" />

        <ImageView
            android:id="@+id/imageView_star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/ic_star"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/im_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_coin" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/im_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/tx_coin"
            app:layout_constraintStart_toStartOf="@+id/tx_coin"
            app:layout_constraintTop_toBottomOf="@+id/tx_coin"
            app:srcCompat="@drawable/im_coin" />

        <TextView
            android:id="@+id/text_dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/dollar_sign"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/tx_value"
            app:layout_constraintTop_toTopOf="@+id/tx_value" />

        <TextView
            android:id="@+id/tx_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/im_view"
            app:layout_constraintStart_toStartOf="@+id/im_view"
            app:layout_constraintTop_toBottomOf="@+id/im_view"
            tools:text="31.234.20" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_add_remove"
            android:fontFamily="@font/roboto"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_value" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btn_navigationDet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_remove">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_navigationDet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_remove">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/v_traded"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/last_hour"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/last_day"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/last_month"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/tx_value_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawableStart="@drawable/ic_attach_money"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="123,456.78" />

                <TextView
                    android:id="@+id/tx_value_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawableStart="@drawable/ic_attach_money"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tx_value_hour"
                    tools:text="123,456.78" />

                <TextView
                    android:id="@+id/tx_value_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawableStart="@drawable/ic_attach_money"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tx_value_day"
                    tools:text="123,456.78" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/btn_navigationDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:itemIconTint="@color/btn_nav_item"
            app:itemTextColor="@color/btn_nav_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
